# CSAAT-video-upload

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
tests/: test_csaatvideoupload.py
upload_tool/: generate.py
upload_tool/api/: admin.py  models.py  serializers.py  urls.py  views.py
upload_tool/api/migrations/: 0001_initial.py  0002_sessions_profile.py  0003_sessions_user.py  0004_auto_20210130_0715.py  0005_auto_20210130_1249.py  0006_auto_20210130_1255.py  0007_auto_20210130_1528.py  0008_auto_20210131_1229.py  0009_auto_20210131_2224.py  0010_auto_20210201_0141.py
upload_tool/api/views/: __init__.py  cameras_views.py  profiles_views.py  sessions_views.py  video_clips_views.py  videos_views.py
upload_tool/frontend/src/: App.js  App.module.css  store.js
upload_tool/frontend/src/actions/: CameraActions.js  ProfileActions.js  SessionActions.js  Types.js  VideoActions.js
upload_tool/frontend/src/components/Player/: Player.js
upload_tool/frontend/src/components/addSession/: AddSession.js  AddSession.module.css
upload_tool/frontend/src/components/profilePage/: ProfilePage.js  ProfilePage.module.css
upload_tool/frontend/src/components/profiles/: Profiles.js  Profiles.module.css
upload_tool/frontend/src/reducers/: CameraReducer.js  ProfileReducer.js  SessionReducer.js  VideoReducer.js  index.js
upload_tool/frontend/static/frontend/: main.js
upload_tool/frontend/templates/frontend/: index.html
upload_tool/upload_tool/: asgi.py  settings.py  urls.py  wsgi.py
(+14 files in other folders)
